--- a/pages/visit.css
+++ b/pages/visit.css
@@ -440,9 +440,9 @@ html, body {
     }
 
    .section_container {
-    margin: 0 2rem 3rem 2rem;
+    margin: 0 1rem 4rem 1rem;
     background: #F1F2F6;
-    width: 300px;
+    width: 320px;
     height: 520px;
   }
 
@@ -615,19 +615,20 @@ html, body {
     font-weight: initial;
   }
 
-  /* ----------Articles---------- */
-  .items_container {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-  }
+/* ----------Articles---------- */
+.items_container {
+  margin: 0 5rem 0 5rem;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
 
- .section_container {
-  margin: 0 2rem 3rem 2rem;
-  background: #F1F2F6;
-  width: 300px;
-  height: 520px;
+.section_container {
+margin: 0 1rem 3rem 1rem;
+background: #F1F2F6;
+width: 350px;
+height: 520px;
 }
 
 .section_container img {
@@ -642,7 +643,7 @@ html, body {
 }
 
 .article_text {
-  margin: 1.5rem 1rem 1.5rem 1rem;
+  margin: 1.5rem 1rem -0.5rem 1rem;
   font-size: 16px;
 }
 
@@ -799,6 +800,43 @@ footer p {
     font-weight: initial;
   }
 
+
+  /* ----------Articles---------- */
+.items_container {
+  margin: 0 5rem 0 5rem;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+.section_container {
+margin: 0 1rem 3rem 1rem;
+background: #F1F2F6;
+width: 350px;
+height: 520px;
+}
+
+.section_container img {
+  width: 100%;
+  height: auto;
+}
+
+.photo_source {
+  opacity: 70%;
+  font-size: x-small;
+  margin: -0.15rem 0 0 0.5rem;
+}
+
+.article_text {
+  margin: 1.5rem 1rem -0.5rem 1rem;
+  font-size: 16px;
+}
+
+.section_container h2 {
+  margin: 1.5rem 0 0 1rem;
+  font-size: 1.2rem;
+}
 
 
   /* ----------Bottom---------- */
