--- a/pages/news.css
+++ b/pages/news.css
@@ -395,15 +395,15 @@ html, body {
   }
 
   #navigation_bar {
+    padding: 0 4rem 0 4rem;
     background-color: #ffffff;
     height: auto;
-    width: 100%;
     text-align: right;
     flex-direction: column;
   }
   
   #navigation_bar ul {
-    padding: 10px 30px 10px 0px;
+    padding: 10px 0px 10px 0px;
     margin: 0px;
     text-align: right;
     display: inline-block;
@@ -421,7 +421,7 @@ html, body {
     font-family: Helvetica;
     text-decoration: none;
     line-height: 52px;
-    padding: 10px;
+    padding-left: 10px;
     opacity: 0.8;
   }
 
@@ -436,6 +436,7 @@ html, body {
     background-position: center center;
     position: relative;
     height: 400px;
+    margin: 0 4rem 0 4rem;
   }
 
   .inside_header_container {
@@ -583,17 +584,16 @@ html, body {
   }
 
   #navigation_bar {
+    margin: 0 2rem 0 2rem;
     background-color: #ffffff;
     height: auto;
-    width: 100%;
     text-align: right;
     flex-direction: column;
   }
   
   #navigation_bar ul {
-    padding: 10px 30px 10px 0px;
+    padding: 10px 0px 10px 0px;
     margin: 0px;
-    padding-right: 5%;
     text-align: right;
     display: inline-block;
   }
@@ -610,7 +610,7 @@ html, body {
     font-family: Helvetica;
     text-decoration: none;
     line-height: 52px;
-    padding: 10px;
+    padding-left: 20px;
     opacity: 0.8;
   }
   
@@ -627,6 +627,7 @@ html, body {
     background-repeat: no-repeat;
     background-size: cover;
     height: 60vh;
+    margin: 0 2rem 0 2rem;
   }
 
   .inside_header_container {
@@ -807,17 +808,16 @@ html, body {
   }
 
   #navigation_bar {
+    margin: 0 5rem 0 5rem;
     background-color: #ffffff;
     height: auto;
-    width: 100%;
     text-align: right;
     flex-direction: column;
   }
   
   #navigation_bar ul {
-    padding: 10px 30px 10px 0px;
+    padding: 10px 0px 10px 0px;
     margin: 0px;
-    padding-right: 5%;
     text-align: right;
     display: inline-block;
   }
@@ -834,7 +834,7 @@ html, body {
     font-family: Helvetica;
     text-decoration: none;
     line-height: 52px;
-    padding: 10px;
+    padding-left: 25px;
     opacity: 0.8;
   }
   
@@ -851,6 +851,7 @@ html, body {
   background-repeat: no-repeat;
   background-size: cover;
   height: 60vh;
+  margin: 0 5rem 0 5rem;
 }
 
 .inside_header_container {
