--- a/styles.css
+++ b/styles.css
@@ -426,15 +426,15 @@ html, body {
   }
 
   #navigation_bar {
+    padding: 0 4rem 0 4rem;
     background-color: #ffffff;
     height: auto;
-    width: 100%;
     text-align: right;
     flex-direction: column;
   }
   
   #navigation_bar ul {
-    padding: 10px 30px 10px 0px;
+    padding: 10px 0 10px 0px;
     margin: 0px;
     text-align: right;
     display: inline-block;
@@ -452,7 +452,7 @@ html, body {
     font-family: Helvetica;
     text-decoration: none;
     line-height: 52px;
-    padding: 10px;
+    padding-left: 10px;
     opacity: 0.8;
   }
 
@@ -467,6 +467,7 @@ html, body {
     background-position: center center;
     position: relative;
     height: 400px;
+    margin: 0 4rem 0 4rem;
   }
 
   .inside_header_container {
@@ -629,17 +630,16 @@ html, body {
   }
 
   #navigation_bar {
+    margin: 0 2rem 0 2rem;
     background-color: #ffffff;
     height: auto;
-    width: 100%;
     text-align: right;
     flex-direction: column;
   }
   
   #navigation_bar ul {
-    padding: 10px 30px 10px 0px;
+    padding: 10px 0px 10px 0px;
     margin: 0px;
-    padding-right: 5%;
     text-align: right;
     display: inline-block;
   }
@@ -656,7 +656,7 @@ html, body {
     font-family: Helvetica;
     text-decoration: none;
     line-height: 52px;
-    padding: 10px;
+    padding-left: 20px;
     opacity: 0.8;
   }
   
@@ -673,6 +673,7 @@ html, body {
     background-repeat: no-repeat;
     background-size: cover;
     height: 60vh;
+    margin: 0 2rem 0 2rem;
   }
 
   .inside_header_container {
@@ -860,17 +861,16 @@ html, body {
     }
   
     #navigation_bar {
+      margin: 0 5rem 0 5rem;
       background-color: #ffffff;
       height: auto;
-      width: 100%;
       text-align: right;
       flex-direction: column;
     }
     
     #navigation_bar ul {
-      padding: 10px 30px 10px 0px;
+      padding: 10px 0 10px 0px;
       margin: 0px;
-      padding-right: 5%;
       text-align: right;
       display: inline-block;
     }
@@ -887,7 +887,7 @@ html, body {
       font-family: Helvetica;
       text-decoration: none;
       line-height: 52px;
-      padding: 10px;
+      padding-left: 25px;
       opacity: 0.8;
     }
     
@@ -905,6 +905,7 @@ html, body {
     background-repeat: no-repeat;
     background-size: cover;
     height: 60vh;
+    margin: 0 5rem 0 5rem;
   }
   
   .inside_header_container {
