--- a/pages/explore.css
+++ b/pages/explore.css
@@ -393,15 +393,15 @@ html, body {
   }
 
   #navigation_bar {
+    padding: 0 4rem 0 4rem;
     background-color: #ffffff;
     height: auto;
-    width: 100%;
     text-align: right;
     flex-direction: column;
   }
   
   #navigation_bar ul {
-    padding: 10px 30px 10px 0px;
+    padding: 10px 0px 10px 0px;
     margin: 0px;
     text-align: right;
     display: inline-block;
@@ -419,7 +419,7 @@ html, body {
     font-family: Helvetica;
     text-decoration: none;
     line-height: 52px;
-    padding: 10px;
+    padding-left: 10px;
     opacity: 0.8;
   }
 
@@ -434,6 +434,7 @@ html, body {
     background-position: center center;
     position: relative;
     height: 400px;
+    margin: 0 4rem 0 4rem;
   }
 
   .inside_header_container {
@@ -581,17 +582,16 @@ html, body {
   }
 
   #navigation_bar {
+    margin: 0 2rem 0 2rem;
     background-color: #ffffff;
     height: auto;
-    width: 100%;
     text-align: right;
     flex-direction: column;
   }
   
   #navigation_bar ul {
-    padding: 10px 30px 10px 0px;
+    padding: 10px 0px 10px 0px;
     margin: 0px;
-    padding-right: 5%;
     text-align: right;
     display: inline-block;
   }
@@ -608,7 +608,7 @@ html, body {
     font-family: Helvetica;
     text-decoration: none;
     line-height: 52px;
-    padding: 10px;
+    padding-left: 20px;
     opacity: 0.8;
   }
   
@@ -625,6 +625,7 @@ html, body {
     background-repeat: no-repeat;
     background-size: cover;
     height: 60vh;
+    margin: 0 2rem 0 2rem;
   }
 
   .inside_header_container {
@@ -799,17 +800,16 @@ html, body {
   }
 
   #navigation_bar {
+    margin: 0 5rem 0 5rem;
     background-color: #ffffff;
     height: auto;
-    width: 100%;
     text-align: right;
     flex-direction: column;
   }
   
   #navigation_bar ul {
-    padding: 10px 30px 10px 0px;
+    padding: 10px 0px 10px 0px;
     margin: 0px;
-    padding-right: 5%;
     text-align: right;
     display: inline-block;
   }
@@ -826,7 +826,7 @@ html, body {
     font-family: Helvetica;
     text-decoration: none;
     line-height: 52px;
-    padding: 10px;
+    padding-left: 25px;
     opacity: 0.8;
   }
   
@@ -843,6 +843,7 @@ html, body {
   background-repeat: no-repeat;
   background-size: cover;
   height: 60vh;
+  margin: 0 5rem 0 5rem;
 }
 
 .inside_header_container {
