--- a/pages/visit.css
+++ b/pages/visit.css
@@ -110,6 +110,10 @@ html, body {
     background: #F1F2F6;
   }
 
+  .items_container {
+    margin-bottom: 5rem;
+  }
+
   .section_container img {
     width: 100%;
     height: auto;
@@ -131,6 +135,67 @@ html, body {
     margin: 2rem 0 2.5rem 1rem;
     font-size: 1.2rem;
   }
+
+  /* ----------Form---------- */
+/* .form_container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  align-self: center;
+  padding: 2 0px;
+} */
+
+.contact_us {
+  text-align: center;
+  margin: 0;
+  opacity: 80%;
+  font-size: 40px;
+}
+
+.form_text {
+  opacity: 80%;
+  max-width: 90%;
+  text-align: center;
+  align-self: center;
+  font-size: small;
+  margin: 25px 25px;
+}
+
+input {
+  padding: 10px 10px;
+  margin: 3px 3px;
+  width: 93%;
+  font-size: large;
+  font-style: normal;
+  opacity: 90%;
+  border: 0;
+  border: 2px solid #eee;
+  border-radius: 5px;
+}
+
+.comment_box {
+  padding: 10px 10px;
+  margin: 10px 0 0 3px;
+  height: 200px;
+  width: 93%;
+  font-size: large;
+  opacity: 90%;
+  border: 2px solid #eee;
+  border-radius: 5px;
+}
+
+.form_container button {
+  appearance: none;
+  -webkit-appearance: none;
+  padding: 12px;
+  margin: 10px 0 0 5px;
+  border: none;
+  background-color:rgb(40, 65, 207);
+  color :#fff;
+  font-weight: 600;
+  border-radius: 5px;
+  width: 30%;
+}
 
   /* ----------Bottom---------- */
   .bottom {
@@ -261,6 +326,10 @@ html, body {
   }
   
    /* ----------Articles---------- */
+  .items_container {
+    margin-bottom: 5rem;
+  }
+
    .section_container {
     background: #F1F2F6;
     width: 70%;
@@ -288,6 +357,68 @@ html, body {
     margin: 2rem 0 2.5rem 1rem;
     font-size: 1.2rem;
   }
+
+   /* ----------Form---------- */
+.form_container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  align-self: center;
+  width: 478px;
+  padding: 2 0px;
+}
+
+.contact_us {
+  align-self: center;
+  margin: 0;
+  opacity: 80%;
+  font-size: 40px;
+}
+
+.form_text {
+  opacity: 80%;
+  max-width: 90%;
+  text-align: center;
+  align-self: center;
+  font-size: small;
+  margin: 20px 20px;
+}
+
+input {
+  padding: 10px 10px;
+  margin: 3px 3px;
+  width: 450px;
+  font-size: large;
+  font-style: normal;
+  opacity: 90%;
+  border: 0;
+  border: 2px solid #eee;
+  border-radius: 5px;
+}
+
+.comment_box {
+  padding: 10px;
+  margin: 10px 0 0 3px;
+  height: 200px;
+  width: 450px;
+  font-size: large;
+  opacity: 90%;
+  border: 2px solid #eee;
+  border-radius: 5px;
+}
+
+.form_container button {
+  appearance: none;
+  -webkit-appearance: none;
+  padding: 12px;
+  margin: 10px 0 0 5px;
+  border: none;
+  background-color:rgb(40, 65, 207);
+  color :#fff;
+  font-weight: 600;
+  border-radius: 5px;
+  width: 30%;
+}
 
   /* ----------Bottom---------- */
   .bottom {
@@ -438,6 +569,7 @@ html, body {
       flex-wrap: wrap;
       align-items: center;
       justify-content: center;
+      margin-bottom: 7rem;
     }
 
    .section_container {
@@ -467,6 +599,73 @@ html, body {
     margin: 1.5rem 0 0 1rem;
     font-size: 1.2rem;
   }
+
+  /* ----------Form---------- */
+.form_container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  align-self: center;
+  width: 478px;
+  padding: 2 0px;
+}
+
+.contact_us {
+  align-self: center;
+  margin: 0;
+  opacity: 80%;
+  font-size: 48px;
+}
+
+.form_text {
+  opacity: 80%;
+  max-width: 90%;
+  text-align: center;
+  align-self: center;
+  font-size: small;
+  margin: 20px 20px;
+}
+
+input {
+  padding: 10px 10px;
+  margin: 3px 3px;
+  width: 450px;
+  font-size: large;
+  font-style: normal;
+  opacity: 90%;
+  border: 0;
+  border: 2px solid #eee;
+  border-radius: 5px;
+}
+
+.comment_box {
+  padding: 10px;
+  margin: 10px 0 0 3px;
+  height: 200px;
+  width: 450px;
+  font-size: large;
+  opacity: 90%;
+  border: 2px solid #eee;
+  border-radius: 5px;
+}
+
+.form_container button {
+  appearance: none;
+  -webkit-appearance: none;
+  padding: 12px;
+  margin: 10px 0 0 5px;
+  border: none;
+  background-color:rgb(40, 65, 207);
+  color :#fff;
+  font-weight: 600;
+  border-radius: 5px;
+  width: 30%;
+}
+
+
+.form_container button:hover {
+  background-color:rgb(91, 108, 206);
+}
 
    /* ----------Bottom---------- */
    .bottom {
@@ -618,7 +817,7 @@ html, body {
 
 /* ----------Articles---------- */
 .items_container {
-  margin: 0 5rem 0 5rem;
+  margin: 0 5rem 10rem 5rem;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -651,6 +850,73 @@ height: 520px;
 .section_container h2 {
   margin: 1.5rem 0 0 1rem;
   font-size: 1.2rem;
+}
+
+/* ----------Form---------- */
+.form_container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  align-self: center;
+  width: 478px;
+  padding: 2 0px;
+}
+
+.contact_us {
+  align-self: center;
+  margin: 0;
+  opacity: 80%;
+  font-size: 48px;
+}
+
+.form_text {
+  opacity: 80%;
+  max-width: 90%;
+  text-align: center;
+  align-self: center;
+  font-size: small;
+  margin: 20px 20px;
+}
+
+input {
+  padding: 10px 10px;
+  margin: 3px 3px;
+  width: 450px;
+  font-size: large;
+  font-style: normal;
+  opacity: 90%;
+  border: 0;
+  border: 2px solid #eee;
+  border-radius: 5px;
+}
+
+.comment_box {
+  padding: 10px;
+  margin: 10px 0 0 3px;
+  height: 200px;
+  width: 450px;
+  font-size: large;
+  opacity: 90%;
+  border: 2px solid #eee;
+  border-radius: 5px;
+}
+
+.form_container button {
+  appearance: none;
+  -webkit-appearance: none;
+  padding: 12px;
+  margin: 10px 0 0 5px;
+  border: none;
+  background-color:rgb(40, 65, 207);
+  color :#fff;
+  font-weight: 600;
+  border-radius: 5px;
+  width: 30%;
+}
+
+
+.form_container button:hover {
+  background-color:rgb(91, 108, 206);
 }
 
 /* ----------Bottom---------- */
@@ -689,6 +955,7 @@ height: 520px;
 margin: 0;
 padding-bottom: 3px;
 }
+
 
 /* ----------Footer---------- */
 footer {
@@ -804,7 +1071,7 @@ footer p {
 
   /* ----------Articles---------- */
 .items_container {
-  margin: 0 5rem 0 5rem;
+  margin: 0 5rem 20vh 5rem;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -839,8 +1106,74 @@ height: 520px;
   font-size: 1.2rem;
 }
 
+/* ----------Form---------- */
+.form_container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  align-self: center;
+  width: 478px;
+  padding: 2 0px;
+}
 
-  /* ----------Bottom---------- */
+.contact_us {
+  align-self: center;
+  margin: 0;
+  opacity: 80%;
+  font-size: 48px;
+}
+
+.form_text {
+  opacity: 80%;
+  max-width: 90%;
+  text-align: center;
+  align-self: center;
+  font-size: small;
+  margin: 20px 20px;
+}
+
+input {
+  padding: 10px 10px;
+  margin: 3px 3px;
+  width: 450px;
+  font-size: large;
+  font-style: normal;
+  opacity: 90%;
+  border: 0;
+  border: 2px solid #eee;
+  border-radius: 5px;
+}
+
+.comment_box {
+  padding: 10px;
+  margin: 10px 0 0 3px;
+  height: 200px;
+  width: 450px;
+  font-size: large;
+  opacity: 90%;
+  border: 2px solid #eee;
+  border-radius: 5px;
+}
+
+.form_container button {
+  appearance: none;
+  -webkit-appearance: none;
+  padding: 12px;
+  margin: 10px 0 0 5px;
+  border: none;
+  background-color:rgb(40, 65, 207);
+  color :#fff;
+  font-weight: 600;
+  border-radius: 5px;
+  width: 30%;
+}
+
+
+.form_container button:hover {
+  background-color:rgb(91, 108, 206);
+}
+
+/* ----------Bottom------------ */
 .bottom {
   margin-top: 10rem;
   padding: 3rem 0 3rem 0;
