--- a/pages/news.css
+++ b/pages/news.css
@@ -111,6 +111,7 @@ html, body {
   /* ----------Articles---------- */
   .section_one, .section_two {
     margin: 0 1rem 0 1rem;
+    padding-bottom: 1rem;
     background-color: #F1F2F6;
   }
 
@@ -282,6 +283,7 @@ html, body {
   /* ----------Articles---------- */
   .section_one, .section_two {
     margin: 0 1rem 0 1rem;
+    padding-bottom: 1rem;
     background-color: #F1F2F6;
   }
 
@@ -467,6 +469,7 @@ html, body {
    /* ----------Articles---------- */
    .section_one, .section_two {
     margin: 0 4rem 0 4rem;
+    padding-bottom: 1rem;
     background-color: #F1F2F6;
   }
 
