--- a/pages/connect.css
+++ b/pages/connect.css
@@ -113,6 +113,7 @@
   /* ----------Articles---------- */
   .section_one, .section_two {
     margin: 0 1rem 0 1rem;
+    padding-bottom: 1rem;
     background-color: #F1F2F6;
   }
 
@@ -282,6 +283,7 @@
   /* ----------Articles---------- */
   .section_one, .section_two {
     margin: 0 1rem 0 1rem;
+    padding-bottom: 1rem;
     background-color: #F1F2F6;
   }
 
@@ -468,6 +470,7 @@
    /* ----------Articles---------- */
    .section_one, .section_two {
     margin: 0 4rem 0 4rem;
+    padding-bottom: 1rem;
     background-color: #F1F2F6;
   }
 
