--- a/styles.css
+++ b/styles.css
@@ -678,6 +678,7 @@ input {
 .contact_us {
   align-self: center;
   margin: 0;
+  padding-top: 7rem;
   opacity: 80%;
   font-size: 40px;
 }
@@ -958,7 +959,7 @@ input {
       text-align: end;
     }
 
-    /* ----------Form---------- */
+/* ----------Form---------- */
 .form_container {
   display: flex;
   flex-direction: column;
