--- a/pages/joinus.css
+++ b/pages/joinus.css
@@ -111,6 +111,15 @@
   }
 
   /* ----------Articles---------- */
+
+  .get_involved_title {
+    font-family: 'Roboto', sans-serif;
+    font-size: 2.5rem;
+    font-weight: 400;
+    color: #1a1a1a;
+    margin: 2rem 0 1.5rem 1rem;
+  }
+
   .section_one, .section_two {
     margin: 0 1rem 0 1rem;
     padding-bottom: 1rem;
@@ -336,6 +345,14 @@ input {
   }
 
   /* ----------Articles---------- */
+  .get_involved_title {
+    font-family: 'Roboto', sans-serif;
+    font-size: 2.5rem;
+    font-weight: 400;
+    color: #1a1a1a;
+    margin: 2rem 0 1.5rem 1rem;
+  }
+
   .section_one, .section_two {
     margin: 0 1rem 0 1rem;
     padding-bottom: 1rem;
@@ -585,6 +602,14 @@ input {
   }
 
    /* ----------Articles---------- */
+   .get_involved_title {
+    font-family: 'Roboto', sans-serif;
+    font-size: 2.5rem;
+    font-weight: 400;
+    color: #1a1a1a;
+    margin: 8rem 0 2rem 12rem;
+  }
+
    .section_one, .section_two {
     margin: 0 12rem 0 12rem;
     padding-bottom: 1rem;
@@ -837,6 +862,14 @@ input {
   }
   
   /* ----------Articles---------- */
+  .get_involved_title {
+    font-family: 'Roboto', sans-serif;
+    font-size: 3.5rem;
+    font-weight: 400;
+    color: #1a1a1a;
+    margin: 8rem 0 0 2rem;
+  }
+
   .section_one {
     margin: 2rem 2rem 0 2rem;
     background-color: #F1F2F6;
@@ -1112,7 +1145,7 @@ h1 {
 
 /* ----------Below Header---------- */
 .title_text {
-  margin: 5rem 0 4rem 0vw;
+  margin: 5rem 25vw 4rem 25vw;
   text-align: center;
   display: flex;
   align-items: center;
@@ -1122,6 +1155,14 @@ h1 {
 }
 
 /* ----------Articles---------- */
+.get_involved_title {
+  font-family: 'Roboto', sans-serif;
+  font-size: 3.5rem;
+  font-weight: 400;
+  color: #1a1a1a;
+  margin: 8rem 0 0 5rem;
+}
+
 .section_one {
 margin: 2rem 5rem 0 5rem;
 background-color: #F1F2F6;
