--- a/pages/visit.css
+++ b/pages/visit.css
@@ -75,7 +75,7 @@ html, body {
     font-family: Helvetica;
     text-decoration: none;
     line-height: 35px;
-    padding: 4px;
+    padding: 3px 2vw 3px 2vw;
     opacity: 0.8;
   }
 
@@ -288,7 +288,7 @@ input {
     font-family: Helvetica;
     text-decoration: none;
     line-height: 35px;
-    padding: 3px;
+    padding: 3px 6px 3px 6px;
     opacity: 0.8;
   }
   
